--- a/repairkawapp/templates/base.html
+++ b/repairkawapp/templates/base.html
@@ -82,6 +82,8 @@
       {% endif %}
  -->  
 <script src="/static/bootstrap-5.1.1-dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 <script type="text/javascript">
         // Example starter JavaScript for disabling form submissions if there are invalid fields
         (function () {
