typo + initialize repairers

--- a/repairkawapp/templates/index.html
+++ b/repairkawapp/templates/index.html
@@ -69,7 +69,7 @@
                                               }],
                                               "language": {
                                                   "decimal":        "",
-                                                  "emptyTable":     "Pas de données disponibls",
+                                                  "emptyTable":     "Pas de données disponibles",
                                                   "info":           "Affiche de _START_ à _END_ sur _TOTAL_ entrées",
                                                   "infoEmpty":      "Affiche 0 à 0 sur 0 entrées",
                                                   "infoFiltered":   "(sur _MAX_ entrées au total)",
